# recovery-desk

./: .env.example  .gitignore  .gitkeep  .vercelignore  Makefile  PUBLISH.md  README.md  mcp.json  pyproject.toml  requirements.txt  vercel.json
api/: agent.py  run.py
demo/: README.md  demo-recordable.html  live-claude-run.json  live-claude-run.md  replay-bookability.html  replay-compliance.html  shipped-microsite.html
fixtures/: missed_call.json
public/: index.html
recovery_desk/: __init__.py  __main__.py  agent.py  blackboard.py  builder.py  capture_live_run.py  grader.py  impact.py  llm.py  make_replay.py  miniyaml.py  record_demo.py  run.py  server.py  test_recovery_desk.py  webapp.py
rubrics/: bookability.rubric.yaml  compliance.rubric.yaml  discoverability.rubric.yaml  donor_callback.rubric.yaml
ui/: index.html
